--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -20,6 +20,6 @@ if (accessToken && refreshToken) {
     <label for="password">Password</label>
     <input type="password" name="password" id="password" />
     <button type="submit">Login</button>
-    <button value="github" name="provider" type="submit">Sign in with GitHub</button>
+    <!-- <button value="github" name="provider" type="submit">Sign in with GitHub</button> -->
   </form>
 </Layout>
